# xlauncher-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/setup/: DEV_GUIDE.md  INSTALLATION_GUIDE.md
include/xlauncher/: api.h
scripts/: run-server.bat
src/: dotenv.h  main.cpp  screen_sharing.cpp  screen_sharing.h
src/application/: app_launcher.cpp  app_launcher.h  app_maanger.h  app_manager.cpp
src/config/: apps.json
src/input/: input_handler.cpp  input_handler.h
src/screen_capture/: screen_capture.cpp  screen_capture.h
src/server/: server.cpp  server.h  websocket_server.cpp  websocket_server.h
src/utils/: base64.cpp  base64.h
